Fix travis tests (freecad and flake) - (Task #10)
Try to replace freecad with call to FreeCAD .exe created by ant script
Try to run flake on the VirtualSatelliteCAD directory only

---
Task #10: Restructure and improve project setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,14 +80,15 @@ jobs:
       # WIP: - mkdir ~/.FreeCAD/Mod/A2plus/
       # WIP: - tar -zxf ~/.FreeCAD/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/A2plus/ --strip-components=1
       # Execute FreeCAD tests
-      - freecad -M $(pwd) -t TestVirtualSatelliteApp -l --log-file "FreeCAD.log"
+      - ./FreeCAD/bin/FreeCAD.exe -M $(pwd) -t TestVirtualSatelliteApp -l --log-file "FreeCAD.log"
       
     - stage: test
       if: branch NOT IN (integration_snapshot, development_snapshot) 
       name: Test - FreeCAD Module flake8
       script:
       - python3 -m pip install flake8
-      - flake8 . --count --show-source --statistics
+      # flake should should only check our code
+      - flake8 ./VirtualSatelliteCAD --count --show-source --statistics
       
     - stage: test
       if: branch NOT IN (integration_snapshot, development_snapshot) 
@@ -99,7 +100,7 @@ jobs:
       # WIP: - mkdir ~/.FreeCAD/Mod/A2plus/
       # WIP: - tar -zxf ~/.FreeCAD/Mod/a2plus.tar.gz -C ~/.FreeCAD/Mod/A2plus/ --strip-components=1
       # Execute FreeCAD tests
-      - freecad -M $(pwd) -t 0 -l --log-file "FreeCAD.log"
+      - ./FreeCAD/bin/FreeCAD.exe -M $(pwd) -t 0 -l --log-file "FreeCAD.log"
 
     # -----------------------------------------------------------
     # Deploy Jobs for unsecured Development.
