Add missing packages for all FreeCAD tests - (Task #10)
Try to solve error with libfreeimage3

---
Task #10: Restructure and improve project setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ addons:
     # WIP: - sourceline: "ppa:freecad-maintainers/freecad-stable"
     packages:
     - metacity
+    - libfreeimage3 
+    - libfreeimage-dev
     # WIP: - freecad
 
 install:
