Resolve error with needed packages by setting env variable - (Task #10)
Try to resolve "xkbcommon: ERROR: failed to add default include path
[...]/usr/lib" that is probably caused the pyqt gui. So try to set the
corresponding environment variable manual"
---
Task #10: Restructure and improve project setup

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ addons:
     # WIP: - sourceline: "ppa:freecad-maintainers/freecad-stable"
     packages:
     - metacity
-    - libfreeimage3 
-    - libfreeimage-dev
-    - libjsoncpp-dev
+    # - libfreeimage3 
+    # - libfreeimage-dev
+    # - libjsoncpp-dev
     # WIP: - freecad
 
 install:
@@ -37,6 +37,7 @@ stages:
 env:
   global:
   - VERSION=4.9.0
+  - QT_XKB_CONFIG_ROOT="./FreeCAD/usr/lib"
   # WIP: - A2PLUS_REPO=https://github.com/kbwbe/A2plus
   # WIP: - A2PLUS_VERSION=v0.4.26
   
